--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- Sale Details container -->
 
         <div class="sale-container">
-          <img src="/images/icon-clock.svg" alt="clock icon" 
+          <img src="images/icon-clock.svg" alt="clock icon" 
           class="clock"/>
           <p class="sale-duration">3 days left</p>
         </div>  
