--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
       <div class="eth-time">
         <!-- Ethereum container -->
         <div class="eth-container">
-          <img src="/images/icon-ethereum.svg" alt="ethereum icon" />
+          <img src="../images/icon-ethereum.svg" alt="ethereum icon"
+          class="eth-icon" />
           <p class="price">0.041 ETH</p>
         </div>
 
         <!-- Sale Details container -->
 
         <div class="sale-container">
-          <img src="images/icon-clock.svg" alt="clock icon" 
+          <img src="/images/icon-clock.svg" alt="clock icon" 
           class="clock"/>
           <p class="sale-duration">3 days left</p>
         </div>  
