troubleshooting broken images | fixed

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <!-- Author Info -->
       <div class="author-container">
-        <img src="/images/image-avatar.png" alt="author image" class="author-img" />
+        <img src="images/image-avatar.png" alt="author image" class="author-img" />
         <p class="author">Creation of <a href="#">Jules Wyvern</a>
         </p>
       </div>  
